--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,187 +6,89 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇯🇵_JP_日本_1
-    type: ss
-    server: 3.113.7.154
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id002
-    name: 🇹🇼_TW_台湾
-    type: ss
-    server: 103.177.33.180
-    port: 443
-    password: 9e44e9ffe5c2
-    cipher: chacha20-ietf-poly1305
-    plugin: v2ray-plugin
-    plugin-opts:
-      mode: websocket
-      host: wtw1000mline004.chilines.club
-      path: /isaifqaagpi
-      mux: true
-  - &id003
     name: 🇺🇸_US_美国_1
-    type: ss
-    server: 194.116.173.21
-    port: 9038
-    password: gYCYXfkUQEs2TaJQ
-    cipher: aes-256-cfb
-  - &id004
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 45.63.106.86
-    port: 54253
-    password: MdADCcEjqI
-    cipher: aes-256-gcm
-  - &id005
-    name: 🇰🇷_KR_韩国_1
-    type: ss
-    server: 43.201.7.243
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id006
-    name: 🇰🇷_KR_韩国_2
-    type: ss
-    server: 43.202.42.149
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id007
-    name: 🇰🇷_KR_韩国_3
-    type: ss
-    server: 221.150.109.5
-    port: 9555
-    password: qwerREWQ@@
-    cipher: aes-256-cfb
-  - &id008
-    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 45.63.106.86
-    port: 37869
-    cipher: auto
-    uuid: 4c90d167-e65b-4419-d455-eb635724d2ed
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-  - &id009
-    name: 🇺🇸_US_美国_4
-    type: trojan
-    server: 45.63.106.86
-    port: 17831
-    udp: true
-    password: vbmwVEzFLS
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇺🇸_US_美国_5
-    type: trojan
-    server: 45.63.106.86
-    port: 42903
-    udp: true
-    password: TmxGNUA1jL
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇺🇸_US_美国_6
-    type: trojan
-    server: 45.63.106.86
-    port: 39277
-    udp: true
-    password: KYAawE5EGp
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇸🇬_SG_新加坡
-    type: ss
-    server: 13.213.44.183
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id013
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 142.0.132.12
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    servername: www.22866947.xyz
-    network: ws
-    ws-opts:
-      path: /path/1690021167515
-  - &id014
-    name: 🇯🇵_JP_日本_2
-    type: trojan
-    server: jp2.fighting.win
-    port: 10001
-    udp: true
-    password: 8861ad96-45d4-42f7-9703-7de363a39a0f
-    skip-cert-verify: true
-    network: tcp
-  - &id015
-    name: 🇯🇵_JP_日本_3
-    type: trojan
-    server: jp1.fighting.win
-    port: 10001
-    udp: true
-    password: 8861ad96-45d4-42f7-9703-7de363a39a0f
-    skip-cert-verify: true
-    network: tcp
-  - &id016
-    name: 🇯🇵_JP_日本_4
-    type: trojan
-    server: jp4.fighting.win
-    port: 10001
-    udp: true
-    password: 8861ad96-45d4-42f7-9703-7de363a39a0f
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇺🇸_US_美国_8
-    type: trojan
-    server: 15.204.209.50
+    server: 172.67.27.227
     port: 80
-    udp: true
-    password: 7ea37e4f-325b-416f-901a-67012367307f
-    sni: telewebion.com
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇨🇦_CA_加拿大->🇫🇷_FR_法国
-    type: vmess
-    server: Shopify.com
-    port: 2086
     cipher: auto
-    uuid: 250f4331-8c3e-4b87-a86b-5c5fbf9ddba8
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /aries
+      path: /shirker
       headers:
-        host: Fr.cloudflare.quest
-  - &id019
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: mci.bamarambash.monster
+        host: dp4.ilovescp.com
+  - &id002
+    name: 🇯🇵_JP_日本
+    type: ss
+    server: 3.112.225.4
     port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id003
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+    type: vmess
+    server: cdn.narutos.top
+    port: 8880
     cipher: auto
-    uuid: 8f74ec8a-971c-11ed-a8fc-0242ac120002
+    uuid: 4b5e4565-322f-4223-a891-78a84f189726
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /b8767a6a-1c30-11ee-ba76-9ee097a90b8b
+      path: /SMNxcwVdTTzcou9yQftDyZcCGQui9a
       headers:
-        host: b8767a6a-1c30-11ee-ba76-9ee097a90b8b.bamarambash.monster
-  - &id020
-    name: 🇨🇾_CY_塞浦路斯->🇬🇧_GB_英国
+        host: paris.yj2022.gq
+  - &id004
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国_1
+    type: vmess
+    server: 103.160.204.69
+    port: 2082
+    cipher: auto
+    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tui.vtcss.top
+  - &id005
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国_2
+    type: vmess
+    server: 103.160.204.48
+    port: 2082
+    cipher: auto
+    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tui.vtcss.top
+  - &id006
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国_3
+    type: vmess
+    server: 103.160.204.71
+    port: 2082
+    cipher: auto
+    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tui.vtcss.top
+  - &id007
+    name: 🇨🇾_CY_塞浦路斯
     type: vmess
     server: wi.saintink.eu.org
     port: 443
@@ -200,47 +102,288 @@ proxies:
       path: /vuk2.0bad.com/chat
       headers:
         host: sub2.saintink.eu.org
-  - &id021
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+  - &id008
+    name: 🇩🇪_DE_德国
+    type: ss
+    server: 89.163.157.4
+    port: 1443
+    password: NGJjN
+    cipher: chacha20-ietf-poly1305
+  - &id009
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国_4
     type: vmess
-    server: cdn.node.user-sub.pddns-usersdk.com
-    port: 13003
+    server: 103.160.204.37
+    port: 2082
     cipher: auto
-    uuid: 5f9f4df4-5398-35d1-9a6a-44a8a575832d
+    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /ef483582-6269-468c-93af-c511eccb8a69
+      path: /blue
       headers:
-        host: cdn.node.user-sub.pddns-usersdk.com
-  - &id022
-    name: 🇺🇸_US_美国_10
+        host: tui.vtcss.top
+  - &id010
+    name: 🇭🇰_HK_香港
     type: vmess
-    server: 64.32.20.97
-    port: 40039
+    server: 103.160.204.86
+    port: 2082
     cipher: auto
-    uuid: c1bad9a6-1482-4941-a0c4-e85f3cbbcb5a
-    alterId: 64
+    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
+    alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id023
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tui.vtcss.top
+  - &id011
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国_5
     type: vmess
-    server: 51vfly1.win
+    server: 103.160.204.141
+    port: 2082
+    cipher: auto
+    uuid: 0ddf0cc4-1487-4ff1-a6a7-d9ab93040606
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /blue
+      headers:
+        host: tui.vtcss.top
+  - &id012
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
+    type: vmess
+    server: cfcdn3.sanfencdn.net
+    port: 2052
+    cipher: auto
+    uuid: 16582759-3d20-4804-9c9c-a58ad7b260a8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /zh-cn
+      headers:
+        host: sg3.sanfencdn2.com
+  - &id013
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 172.64.169.199
+    port: 80
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: dp4.scproxy.top
+  - &id014
+    name: 🇷🇺_RU_俄罗斯联邦_1
+    type: vmess
+    server: 185.59.218.177
     port: 443
     cipher: auto
-    uuid: 9681f99e-d251-477a-d777-1d01ee550481
+    uuid: 8f74ec8a-971c-11ed-a8fc-0242ac120002
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /myblog
+      path: /72d6d25e-1b39-11ee-a5c8-8213fd3be4b9
+      headers:
+        host: 72d6d25e-1b39-11ee-a5c8-8213fd3be4b9.bamarambash.monster
+  - &id015
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+    type: vmess
+    server: 172.64.82.127
+    port: 80
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: uk2.scproxy.top
+  - &id016
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
+    type: vmess
+    server: 104.31.16.46
+    port: 2082
+    cipher: auto
+    uuid: 58fe1542-5290-40ad-815a-77707a81afe5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /IOebhLMhl1CTbFHbL95myfRX2
+      headers:
+        host: ca5.tehme100.fun
+  - &id017
+    name: 🇸🇬_SG_新加坡
+    type: ss
+    server: 3.0.147.22
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id018
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_1
+    type: vmess
+    server: 172.64.204.101
+    port: 2052
+    cipher: auto
+    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /bxqmiao
+      headers:
+        host: bxa.76898102.xyz
+  - &id019
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_2
+    type: vmess
+    server: 162.159.245.41
+    port: 2052
+    cipher: auto
+    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /bxqmiao
+      headers:
+        host: bxa.76898102.xyz
+  - &id020
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_3
+    type: vmess
+    server: 172.64.169.174
+    port: 2052
+    cipher: auto
+    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /bxqmiao
+      headers:
+        host: bxa.76898102.xyz
+  - &id021
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_4
+    type: vmess
+    server: 172.64.201.185
+    port: 2052
+    cipher: auto
+    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /bxqmiao
+      headers:
+        host: bxa.76898102.xyz
+  - &id022
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: cf-lt.sharecentre.online
+    port: 80
+    cipher: auto
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /shirker
+      headers:
+        host: dp4.scproxy.top
+  - &id023
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_5
+    type: vmess
+    server: 172.64.141.140
+    port: 2052
+    cipher: auto
+    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /bxqmiao
+      headers:
+        host: bxa.76898102.xyz
   - &id024
-    name: 🇺🇸_US_美国_11
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_6
+    type: vmess
+    server: 162.159.242.238
+    port: 2052
+    cipher: auto
+    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /bxqmiao
+      headers:
+        host: bxa.76898102.xyz
+  - &id025
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_7
+    type: vmess
+    server: 172.64.108.66
+    port: 2052
+    cipher: auto
+    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /bxqmiao
+      headers:
+        host: bxa.76898102.xyz
+  - &id026
+    name: 🇷🇺_RU_俄罗斯联邦_2
+    type: vmess
+    server: 45.144.179.138
+    port: 443
+    cipher: auto
+    uuid: 96cbe4a6-5728-42df-dc7a-ceb9b51a3db5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id027
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: 162.159.251.216
+    port: 8080
+    cipher: auto
+    uuid: d3ded505-f89d-4070-dafa-8288ffbabd32
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: vceu3.vpn66.eu.org
+  - &id028
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: cf2.992688.xyz
     port: 8080
@@ -254,111 +397,47 @@ proxies:
       path: /
       headers:
         host: haxus3.vpn66.eu.org
-  - &id025
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 172.64.229.116
-    port: 8880
-    cipher: auto
-    uuid: 4b5e4565-322f-4223-a891-78a84f189726
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /XQ2WCa29jfDMGBcbnQ
-      headers:
-        host: netherlands.yj2022.gq
-  - &id026
-    name: 🇩🇪_DE_德国
-    type: vmess
-    server: cdn.anycast.eu.org
-    port: 443
-    cipher: auto
-    uuid: e3a37909-487c-4748-8ba4-945290267018
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: e3a37909
-      headers:
-        host: dd2.1808.cf
-  - &id027
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: cloudconebbb.gorgorchicken.one
-    port: 8443
-    cipher: auto
-    uuid: aa0c4744-9568-4bee-a08b-73668a9b2a42
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /cloudconebbb
-      headers:
-        host: cloudconebbb.gorgorchicken.one
-  - &id028
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: cloudconeaaa.gorgorchicken.one
-    port: 8443
-    cipher: auto
-    uuid: 1cec1ebc-b489-4769-f2d9-e079b5832a60
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: cloudconeaaa.gorgorchicken.one
-    network: ws
-    ws-opts:
-      path: /cloudconeaaa
-      headers:
-        host: cloudconeaaa.gorgorchicken.one
   - &id029
-    name: 🇺🇸_US_美国_14
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: 104.18.64.251
-    port: 8880
-    cipher: auto
-    uuid: 4b5e4565-322f-4223-a891-78a84f189726
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /GdtYWlsLmNvbSJ9LCJjb3V
-      headers:
-        host: newyork.yj2022.gq
-  - &id030
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡
-    type: vmess
-    server: a5.wuxianliulianng.xyz
-    port: 8443
-    cipher: auto
-    uuid: 8d1cb29f-4fba-43df-9ed5-d7dc98c7656d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: 3.wuxianliulianng.xyz
-    network: ws
-    ws-opts:
-      path: /sometimesnaive
-      headers:
-        host: 3.wuxianliulianng.xyz
-  - &id031
-    name: 🇨🇳_CN_中国
-    type: vmess
-    server: 101.42.30.206
+    server: 172.67.65.210
     port: 80
     cipher: auto
-    uuid: 24bc9855-8f7c-4543-e29d-970045f205f2
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /shirker
+      headers:
+        host: dp3.scproxy.top
+  - &id030
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_8
+    type: vmess
+    server: 141.101.120.188
+    port: 2052
+    cipher: auto
+    uuid: 6e13ff0b-55a6-3767-8b92-3098fda40927
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /bxqmiao
+      headers:
+        host: bxa.76898102.xyz
+  - &id031
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 64.32.24.210
+    port: 48659
+    cipher: auto
+    uuid: cff9d860-7330-4ee1-b072-7142ddf1571d
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
